style.css
/* ... */
#hello-world:after {
  content: '';
  box-shadow: 0 0 0 1px white;
  animation: blink 1.5s linear 0s infinite alternate;
  will-change: opacity;
}

/* @media ( max-width: 60ch ) {
  #content {
    padding: 3ch 2ch;
  }
  .icon {
    height: 40vw;
  }

  .subtopic .icon {
    height: 25vw;
    margin-bottom: 0.5rem;

    pointer-events: none;
}
}
 */

.description {
  justify-content: center;
  max-width: 25rem
}

.description .image-container {
  justify-content: center;
}

.image-container {
  flex-basis: 15rem;
  
  margin-top: 1rem;
  display: flex;
  align-items: center;
}

.description .items,
.description .item {
  justify-content: flex-start;
}

.description .items {
  flex-basis: 15rem;
  margin: 0;
  margin-top: 1rem;
}
.description .item .icon {
  order: 0;
  margin: 0;
  margin-right: 1rem;
}
.description .item .subtext {
  margin: 0;
}

.description .item {
  min-height: 3.5rem;
  flex-basis: 100%;
  max-width: 15rem;
}
.description a {
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid hsla(199, 25%, 50%, 0.5);
  cursor: pointer;
  will-change: background-color;
  transition: 200ms ease;
}

.description a:hover {
  border-color: hsla(199, 25%, 50%, 0.75);
  background-color: hsla(199, 25%, 50%, 0.5);
}
.description .item .subtext {
  font-size: 1rem;
}
.description .item .icon {
  height: 2rem
}

.description .separator {
  /* padding: 0 10rem; */
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 50%;
  margin: 0.5rem auto;
}

 .avatar {
   height: 10rem;
   align-self: flex-start;
   border-radius: 50%;
   /* margin-bottom: 2rem; */
   border: 0.25rem solid hsla(199, 25%, 50%, 0.5);
 
   opacity: 1;
}

@media ( max-width: 25rem ) {
  .array {
    margin: 1rem 1rem;
  }
}
@media ( min-width: 25rem ) and ( max-width: 40rem ) {
  .array {
    margin: 1rem 2rem;
  }
}

@media ( min-width: 40rem ) {
  .topic .array {
    /* display: flex; */
    /* flex-direction: column; */
    flex-basis: 15rem;
    margin-left: 2rem;
    margin-right: 0;

    border: none;
}
  .array li {
    text-align: left;

    padding: 0;
}

  .subtopic .separator {
    display: block;
  }

  .items,
  .item {
    justify-content: flex-end;
  }

  .item .icon {
    order: 2;
  }
  .item .subtext {
    margin-left: 0;
    margin-right: 1rem;
  
    text-align: right;
}
  .items {
    margin-right: 2rem;
  }
}

/* @media ( min-width: 0ch ) { */
  .topic,
  .subtopic,
  .item {
    flex-wrap: wrap;

    text-decoration: none;
  }

  .icon {
    /* flex-basis: 100%; */
    margin-bottom: 2rem;
  }

  .text {
    margin-left: 0;
    flex-basis: 100%;
    text-align: center;

    margin-bottom: 0.5rem;
}
/* } */

footer {
  color: hsla(199, 25%, 50%, 0.5);
  z-index: 3;
  margin-top: 2rem;
}

